fix footer z-index

--- a/coursework/final-project/scss/_footer.scss
+++ b/coursework/final-project/scss/_footer.scss
@@ -32,4 +32,5 @@
   background: darken($background-color, 5);
   color: white;
   text-align: center;
+  z-index: 99;
 }
